# gradescope_mean

./: .gitignore  LICENSE  MANIFEST.in  README.md  histogram.html  process_scope.py  pyproject.toml  readme.md  setup.py
doc/: config.md  grade_full.csv  hist.html  upload_banner.md  upload_canvas.md
gradescope_mean/: __init__.py  __main__.py  assign_list.py  canvas.py  config.py  config.yaml  gradebook.py  perc_to_letter.py  plot.py  predict_scores.py
gradescope_mean/banner/: __main__.py
gradescope_mean/canvas/: __main__.py  canvas.py
mean_scope/: __main__.py  assign_list.py  config.py  config.yaml  get_mean_drop_low.py  gradebook.py
test/: df_exp.csv  df_meta_exp.csv  df_perc_exp.csv  df_test_predict.csv  df_test_predict_out.csv  scope.csv  test_assign_list.py  test_banner.py  test_canvas.py  test_config.py  test_get_mean_drop_low.py  test_gradebook.py  test_main.py  test_perc_to_letter.py  test_plot.py  test_predict_scores.py
