[tool.poetry]
name = "gradescope-mean"
version = "0.0.14"
description = "Utility to average gradescope csv output to final grades"
authors = ["Matt Higger <mhigger@ccs.neu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
plotly = "^5.18.0"
pytest = "^7.4.3"
"ruamel.yaml" = "^0.18.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/matthigger/gradescope_mean"