[project]
name = "gradescope-mean"
version = "0.0.17"
description = "Utility to average gradescope csv output to final grades"
authors = [
    {name = "Matt Higger",email = "mhigger@ccs.neu.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "ruamel-yaml (>=0.18.10,<0.19.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

